--- a/src/main/resources/templates/addContact.html
+++ b/src/main/resources/templates/addContact.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Address Book</title>
@@ -23,6 +22,7 @@
         <div class="col-md-12 col-sm-12 col-12">
             <div class="card h-100">
                 <div class="card-body">
+                    <form action="/addContact" method="POST">
                     <div class="row gutters" id="fields">
 
                         <div class="col-md-6 col-sm-6 col-12">
@@ -30,7 +30,7 @@
                                 <label for="firstName">
                                     <h6 class="text-primary">First Name</h6>
                                 </label>
-                                <input type="text" class="form-control" id="firstName" placeholder="">
+                                <input type="text" class="form-control" name="firstName" id="firstName" placeholder="" minlength="1" maxlength="45" required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12">
@@ -38,24 +38,24 @@
                                 <label for="lastName">
                                     <h6 class="text-primary">Last Name</h6>
                                 </label>
-                                <input type="text" class="form-control" id="lastName" placeholder="">
+                                <input type="text" class="form-control" name="lastName" id="lastName" placeholder="" minlength="1" maxlength="45" required>
 
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12">
                             <div class="form-group">
-                                <label for="phone">
+                                <label for="phoneNumber">
                                     <h6 class="text-primary">Phone</h6>
                                 </label>
-                                <input type="text" class="form-control" id="phone" placeholder="">
+                                <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="" minlength="1" maxlength="45" required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12">
                             <div class="form-group">
-                                <label for="mobilePhone">
+                                <label for="mobilePhoneNumber">
                                     <h6 class="text-primary">Mobile Phone</h6>
                                 </label>
-                                <input type="text" class="form-control" id="mobilePhone" placeholder="">
+                                <input type="text" class="form-control" name="mobilePhoneNumber" id="mobilePhoneNumber" placeholder="" minlength="1" maxlength="45" required>
                             </div>
                         </div>
 
@@ -64,7 +64,7 @@
                                 <label for="address">
                                     <h6 class="text-primary">Address</h6>
                                 </label>
-                                <input type="text" class="form-control" id="address" placeholder="">
+                                <input type="text" class="form-control" name="address" id="address" placeholder="" minlength="1" maxlength="125" required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12">
@@ -72,7 +72,7 @@
                                 <label for="company">
                                     <h6 class="text-primary">Company</h6>
                                 </label>
-                                <input type="text" class="form-control" id="company" placeholder="">
+                                <input type="text" class="form-control" name="companyName" id="company" placeholder="" minlength="1" maxlength="45" required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12">
@@ -80,7 +80,7 @@
                                 <label for="email">
                                     <h6 class="text-primary">Email</h6>
                                 </label>
-                                <input type="email" class="form-control" id="email" placeholder="">
+                                <input type="email" class="form-control" name="email" id="email" placeholder="" minlength="1" maxlength="45" required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12">
@@ -88,7 +88,7 @@
                                 <label for="fax">
                                     <h6 class="text-primary">Fax</h6>
                                 </label>
-                                <input type="text" class="form-control" id="fax" placeholder="">
+                                <input type="text" class="form-control" name="faxNumber" id="fax" placeholder="" minlength="1" maxlength="45" required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12 ">
@@ -96,7 +96,7 @@
                                 <label for="comment">
                                     <h6 class="text-primary">Comment</h6>
                                 </label>
-                                <input type="text" class="form-control" id="comment" placeholder="">
+                                <input type="text" class="form-control" name="comment" id="comment" maxlength="255" placeholder="">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-12">
@@ -104,13 +104,13 @@
                                 <label for="label">
                                     <h6 class="text-primary">Label</h6>
                                 </label>
-                                <select class="custom-select" id="label">
-                                    <option value="Blue" class="bg-primary text-white">Blue</option>
-                                    <option value="Red" class="bg-danger text-white">Red</option>
-                                    <option value="Yellow" class="bg-warning text-dark">Yellow</option>
-                                    <option value="Green" class="bg-success text-white">Green</option>
-                                    <option value="Grey" class="bg-secondary text-white">Grey</option>
-                                    <option value="Black" class="bg-dark text-white">Black</option>
+                                <select class="custom-select" name="label" id="label">
+                                    <option value="BLUE" class="bg-primary text-white">blue</option>
+                                    <option value="RED" class="bg-danger text-white">red</option>
+                                    <option value="YELLOW" class="bg-warning text-dark">yellow</option>
+                                    <option value="GREEN" class="bg-success text-white">green</option>
+                                    <option value="GREY" class="bg-secondary text-white">grey</option>
+                                    <option value="BLACK" class="bg-dark text-white">black</option>
                                 </select>
                             </div>
                         </div>
@@ -119,8 +119,9 @@
                     </div>
                     <div>
                         <a class="btn btn-success btn-addContact" id="addField">Add Field</a>
-                        <a class="btn btn-primary btn-addContact float-right">Add Contact</a>
+                        <input class="btn btn-primary btn-addContact float-right" type="submit" title="Add Contact">
                     </div>
+                    </form>
                 </div>
             </div>
         </div>
