--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,14 +20,16 @@
 
     <div class="container login-page-div rounded shadow-lg bg-white">
         <h1 class="text-center">Login</h1>
-        <form>
+        <form th:action="@{/login}" th:object="${loginUserDTO}" method="post">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" />
+                <input type="text" class="form-control" th:field="*{username}" id="username" />
+                <p th:if="${#fields.hasErrors('username')}" th:errorclass="error" th:errors="*{username}" />
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" />
+                <input type="password" class="form-control" th:field="*{password}" id="password" />
+                <p th:if="${#fields.hasErrors('password')}" th:errorclass="error" th:errors="*{password}" />
             </div>
             <button type="submit" class="btn btn-primary btn-block" id="signInButton">Login</button>
         </form>
