--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -35,7 +35,7 @@
             <tbody >
             <th:block th:each="contact : ${contacts}">
             <tr th:classappend="${contact.label}" th:onclick="|window.location.href='/contactPage?id=${contact.id}'|">
-                <th scope="row" th:text="${contact.id}">3</th>
+                <th scope="row" th:text="${contactStat.index+1}">3</th>
                 <td th:text="${contact.firstName}">Peter</td>
                 <td th:text="${contact.lastName}">Petrov</td>
                 <td class="d-none d-lg-table-cell" th:text="${contact.companyName}">Microsoft</td>
@@ -45,46 +45,7 @@
                 <td class="d-none d-md-table-cell" th:text="${contact.comment}">Comment</td>
             </tr>
             </th:block>
-<!--                <tr class="table-primary">-->
-<!--                    <th scope="row">1</th>-->
-<!--                    <td>Mario</td>-->
-<!--                    <td>Ivanov</td>-->
-<!--                    <td class="d-none d-lg-table-cell">Twitter</td>-->
-<!--                    <td class="d-none d-md-table-cell">028742135</td>-->
-<!--                    <td class="d-none d-sm-table-cell">mario@mail.bg</td>-->
-<!--                    <td>0877794849</td>-->
-<!--                    <td class="d-none d-md-table-cell">Comment</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <th scope="row">2</th>-->
-<!--                    <td>Ivan</td>-->
-<!--                    <td>Ivanov</td>-->
-<!--                    <td class="d-none d-lg-table-cell">Apple</td>-->
-<!--                    <td class="d-none d-md-table-cell">028742135</td>-->
-<!--                    <td class="d-none d-sm-table-cell">ivan@mail.bg</td>-->
-<!--                    <td>0877794849</td>-->
-<!--                    <td class="d-none d-md-table-cell">Comment</td>-->
-<!--                </tr>-->
-<!--                <tr class="table-warning">-->
-<!--                    <th scope="row">3</th>-->
-<!--                    <td>Peter</td>-->
-<!--                    <td>Petrov</td>-->
-<!--                    <td class="d-none d-lg-table-cell">Microsoft</td>-->
-<!--                    <td class="d-none d-md-table-cell">028742135</td>-->
-<!--                    <td class="d-none d-sm-table-cell">peter@mail.bg</td>-->
-<!--                    <td>0877794849</td>-->
-<!--                    <td class="d-none d-md-table-cell">Comment</td>-->
-<!--                </tr>-->
-<!--                <tr class="table-warning">-->
-<!--                    <th scope="row">3</th>-->
-<!--                    <td>Peter</td>-->
-<!--                    <td>Petrov</td>-->
-<!--                    <td class="d-none d-lg-table-cell">Microsoft</td>-->
-<!--                    <td class="d-none d-md-table-cell">028742135</td>-->
-<!--                    <td class="d-none d-sm-table-cell">peter@mail.bg</td>-->
-<!--                    <td>0877794849</td>-->
-<!--                    <td class="d-none d-md-table-cell">Comment</td>-->
-<!--                </tr>-->
+
             </tbody>
 
         </table>
