--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item" th:if="${session.LOGGED_USER_ID != null}">
-                <a class="nav-link" href="#">My Contacts</a>
+                <a class="nav-link" href="/contacts">My Contacts</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Search</a>
