--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -1,4 +1,4 @@
-<div th:fragment="header">
+<div th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
     <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
     <a class="navbar-brand" href="#">Address Book</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="/contacts">Home</a>
             </li>
             <li class="nav-item" th:if="${session.LOGGED_USER_ID != null}">
                 <a class="nav-link" href="/contacts">My Contacts</a>
@@ -21,7 +21,7 @@
         </ul>
         <ul class="nav navbar-nav ml-auto">
             <li class="nav-item" th:if="${session.LOGGED_USER_ID != null}">
-                <a class="nav-link" href="#">My Profile</a>
+                <a class="nav-link" href="/myProfile">My Profile</a>
             </li>
 
             <li class="nav-item" th:if="${session.LOGGED_USER_ID == null}">
