Add white label

--- a/src/main/resources/templates/addContact.html
+++ b/src/main/resources/templates/addContact.html
@@ -105,6 +105,7 @@
                                     <h6 class="text-primary">Label</h6>
                                 </label>
                                 <select class="custom-select" name="label" id="label">
+                                    <option value="WHITE" class="">white</option>
                                     <option value="BLUE" class="bg-primary text-white">blue</option>
                                     <option value="RED" class="bg-danger text-white">red</option>
                                     <option value="YELLOW" class="bg-warning text-dark">yellow</option>
