--- a/src/main/resources/templates/editContactPage.html
+++ b/src/main/resources/templates/editContactPage.html
@@ -86,6 +86,7 @@
                                     <h6 class="text-primary">Label</h6>
 
                                 <select class="custom-select" name="label">
+                                    <option value="WHITE" class="" th:selected="${contact.label == T(nbu.java.model.pojo.Contact.Label).WHITE}">white</option>
                                     <option value="BLUE" class="bg-primary text-white" th:selected="${contact.label == T(nbu.java.model.pojo.Contact.Label).BLUE}">blue</option>
                                     <option value="RED" class="bg-danger text-white" th:selected="${contact.label == T(nbu.java.model.pojo.Contact.Label).RED}">red</option>
                                     <option value="YELLOW" class="bg-warning text-dark" th:selected="${contact.label == T(nbu.java.model.pojo.Contact.Label).YELLOW}">yellow</option>
