front-end update

--- a/src/main/resources/templates/downloadContacts.html
+++ b/src/main/resources/templates/downloadContacts.html
@@ -15,7 +15,7 @@
 
 <header th:insert="navigation :: header"></header>
 
-<div class="container contact-page-div">
+<div class="container contact-page-div mx-2 mx-sm-2 mx-md-auto mx-lg-auto mx-xl-auto">
 
     <h2 class="title">Download Contacts</h2>
 
