--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -101,6 +101,17 @@ h1{
     margin-top: 3.5rem;
 }
 
+/*Search Page */
+
+#searchByFirstAndLastNameForm{
+    margin-left: -1.2rem;
+}
+
+.title{
+    margin: 20px 0px;
+    text-align: center;
+}
+
 /* Colors */
 
 .YELLOW{
@@ -136,8 +147,5 @@ h1{
     color: red;
 }
 
-.title{
-    margin: 20px 0px;
-    text-align: center;
-}
+
 
